@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

title Class Diagram - US019

class Agency {
    - Integer id
    - String description
    - Email emailAddress
    - String phoneNumber
    + getAgencyId()
    + getNumberOfDeals()
}

class AnnouncementList{
    + getDealsNumber()
}


class Announcement{
    - LocalDate acceptanceDate
    - LocalDate saleDate
    - Double saleAmount
    - Integer id
    - List<Visit> visitList
    + isDeal()
}

class Partition {
    - List<Integer> listOfDeals
    - int minDifference
    - List<Integer> subList1
    - List<Integer> subList2
    + Partition(listOfDeals)
    + getSubLists()
    - getPowerOfTwo(listOfDeals)
    - calculatePartitions(listOfDeals)
    - decimalToBinary(number)
    - calculateDifference(subListSum1,subListSum2)
    - getPartitionInfo(subList)

}

note right of Partition::getBinaryRepList
The variable size is
retrieved from listOfDeals
end note

note right of Partition::getBinaryRepresentation
idx equals 0, and will
be incremented in every
iteration
end note

'class ListInteger << List<Integer> >>{
'    + add(agencyId, deals)
'}

'class ListString << List<String> >>{
'    + add(sublistString)
'}

class AgencyRepository {
    + getDealsNumberOfAgencies()
}

class Repositories {
    - Repositories()
    + getInstance() : repositories
    + getAgencyRepository()
}

class SubdivideAgenciesController {
    + SubdivideAgenciesController(AgencyRepository)
    + getAgenciePartitions()
}

class SubdivideAgenciesUI {
}

Repositories -> Repositories : instance

SubdivideAgenciesUI .left> SubdivideAgenciesController

SubdivideAgenciesController .> Repositories : repositories

SubdivideAgenciesController .down.> Partition

Repositories -> "1" AgencyRepository

SubdivideAgenciesController ..> Agency
SubdivideAgenciesController ..> AgencyRepository : AgencyRepository

AgencyRepository "1" --> "*" Agency : aggregates >

Agency "1" -left> "1" AnnouncementList : owns >

AnnouncementList "1" -left> "*" Announcement: records >

'AgencyRepository "1" -> "1" ListInteger : creates >

'Partition "1" --> "1" ListString : creates >





@enduml